@@ -1,5 +1,5 @@
 <!-- Action definition file for QuickNotepad plugin -->
-<!-- $Id: actions.xml,v 1.6 2002/04/11 08:45:52 spestov Exp $
+<!-- $Id: actions.xml,v 1.7 2004/12/05 04:37:05 spestov Exp $
 -->
 
 <!DOCTYPE ACTIONS SYSTEM "actions.dtd">
@@ -7,22 +7,22 @@
 <ACTIONS>
 	<ACTION NAME="quicknotepad.choose-file">
 		<CODE>
-			view.getDockableWindowManager()
-				.getDockable(QuickNotepadPlugin.NAME).chooseFile();
+			wm.addDockableWindow(QuickNotepadPlugin.NAME);
+			wm.getDockableWindow(QuickNotepadPlugin.NAME).chooseFile();
 		</CODE>
 	</ACTION>
 
 	<ACTION NAME="quicknotepad.save-file">
 		<CODE>
-			view.getDockableWindowManager()
-				.getDockable(QuickNotepadPlugin.NAME).saveFile();
+			wm.addDockableWindow(QuickNotepadPlugin.NAME);
+			wm.getDockableWindow(QuickNotepadPlugin.NAME).saveFile();
 		</CODE>
 	</ACTION>
 
 	<ACTION NAME="quicknotepad.copy-to-buffer">
 		<CODE>
-			view.getDockableWindowManager()
-				.getDockable(QuickNotepadPlugin.NAME).copyToBuffer();
+			wm.addDockableWindow(QuickNotepadPlugin.NAME);
+			wm.getDockableWindow(QuickNotepadPlugin.NAME).copyToBuffer();
 		</CODE>
 	</ACTION>
 </ACTIONS>
