@@ -27,7 +27,7 @@ package org.gjt.sp.jedit;
  * development.
  * @since jEdit 4.2pre1
  * @author Slava Pestov
- * @version $Id: Debug.java,v 1.28 2004/02/22 20:00:52 spestov Exp $
+ * @version $Id: Debug.java,v 1.29 2004/12/05 04:37:06 spestov Exp $
  */
 public class Debug
 {
@@ -147,4 +147,11 @@ public class Debug
 	 * Create new search dialogs instead of reusing instances.
 	 */
 	public static boolean DISABLE_SEARCH_DIALOG_POOL = false;
+	
+	/**
+	 * Disable multihead support, since it can cause window positioning
+	 * problems with some Java versions.
+	 * @since jEdit 4.3pre1
+	 */
+	public static boolean DISABLE_MULTIHEAD = false;
 }
